# promtistry

./: .gitignore  .pre-commit-config.yaml  AIDER_INSTRUCTIONS.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  pages.yml
docs/: index.md
n/: settings.json
prompts/: builder.md  judge.md
promtistry/: __init__.py  __main__.py  config.py
promtistry/agents/: __init__.py  builder.py  chat_agent.py  judge.py  protocols.py
promtistry/flow/: __init__.py  langgraph.py  state.py
promtistry/ui/: __init__.py  streamlit_ui.py
tests/: test_smoke.py
