[project]
name = "promtistry"
version = "0.1.0"
description = "Prompt‑Builder Assistant – iteratively design high‑quality system prompts."
authors = [
    {name = "Christian Weinrich",email = "weinrich.c@web.de"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.13,<4.0"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.12.5"
mypy = "^1.17.0"
pytest = "^8.4.1"
pre-commit = "^4.2.0"
commitizen = "^4.8.3"
mkdocs = "^1.6.1"
mkdocs-material = "^9.6.16"


[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101"]

[tool.ruff]
select = ["ALL"]
ignore = []
fix = true

[tool.mypy]
python_version = "3.13"
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_any_generics = true
no_implicit_optional = true
strict_equality = true
check_untyped_defs = true
show_error_codes = true
pretty = true
