[project]
name = "promtistry"
version = "0.1.0"
description = "Prompt‑Builder Assistant – iteratively design high‑quality system prompts."
authors = [
    {name = "Christian Weinrich",email = "weinrich.c@web.de"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11.0,<4.0.0"
dependencies = [
    "streamlit>=1.29.0,<2.0.0",
    "langchain>=0.0.180,<1.0.0",
    "langchain-community>=0.0.17,<1.0.0",
    "openai>=0.27.0,<1.0.0",
    "langgraph (>=0.5.4,<0.6.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = ">=25.1.0,<26.0.0"
ruff = ">=0.12.5,<0.13.0"
mypy = ">=1.17.0,<2.0.0"
pytest = ">=8.4.1,<9.0.0"
pre-commit = ">=4.2.0,<5.0.0"
commitizen = ">=4.8.3,<5.0.0"
mkdocs = ">=1.6.1,<2.0.0"
mkdocs-material = ">=9.6.16,<10.0.0"


[tool.ruff.lint.per-file-ignores]
"tests/*.py" = ["S101"]

[tool.ruff]
select = ["ALL"]
ignore = []
fix = true

[tool.mypy]
python_version = "3.11"
warn_unused_configs = true
warn_return_any = true
warn_unused_ignores = true
warn_redundant_casts = true
warn_unreachable = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
disallow_untyped_calls = true
disallow_untyped_decorators = true
disallow_any_generics = true
no_implicit_optional = true
strict_equality = true
check_untyped_defs = true
show_error_codes = true
pretty = true
